pay/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pay
  namespace: wavve
  labels:
    app: pay
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: pay
